# SAMs_Simulator

./: .gitignore  README.md
Data/config/: col_23_words.txt
Data/input/: molecule_collection_encoded.txt  molecule_collection_encoded_filted.txt  selectTxt_SAM_mole.txt  selectTxt_SAM_mole_filted.txt  selectTxt_unix_original_0.02.txt
Data_Generator/: CMakeLists.txt  config.txt  data_generator.cc  main.cc  predict_data_analysis.cc
Data_Generator/src/encode_code/: mapping_code.cc  mapping_code.h  num_encode.cc  num_encode.h  onehot_23.cc  regex_23.cc  regex_23.h
Data_Generator/src/fix_data/: fix_num.cc  fix_num.h  fix_str.cc  fix_str.h  fix_years.cc  fix_years.h
Data_Generator/src/include/: IMPORT_LIB.h  MACRO.h  MACRO.h.in
Data_Generator/src/read_params/: Config.cc  Config.h
Data_Generator/src/utils/: Utils_2.h  utils_2.cc
Fitting_Model/: essemble_model.py  general_model.py  params.py  self_ada.py  self_bayesian.py  self_knn.py  self_lr.py  self_mlp.py  self_mlp_pytorch.py  self_rf.py  self_svm.py  self_xgb.py  tmp.txt  utils.py  utils_local.py
Raw_Mole_Encode_Generator/: demo.py  mole_encode_generator.py
